2002-08-31 19:54  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/path.m (DPSrectfill::::): Calculate alpha pointer
	correctly when clipped.

	* Source/art/composite.m (-compositeGState:fromRect:toPoint:op:):
	Fix detection of horizontal-only overlap (order==2), and handling
	it in the general case.

	* Source/blit.m: Whitespace cleanups.

2002-08-31 15:52  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/image.m: Implement clipping of images using the
	clipping spans.

2002-08-31 14:40  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTContext.m, Source/art/ARTGState.h, Source/art/path.m:
	Store clipping path as a set of spans instead of as an svp. Build
	spans from DPSclip and DPSeoclip, and use it when clipping (only
	implemented for paths, so far).

2002-08-30 15:42  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/blit.h, Source/art/blit.m, Source/art/path.m: Move
	svp rendering code to path.m.

2002-08-30 01:29  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/GNUmakefile, Source/art/ARTContext.m, Source/art/path.m:
	Move remaining path handling code to path.m. Reformat.

2002-08-30 00:33  Alexander Malmberg  <alexander@malmberg.org>

	* Headers/gsc/GSGStateOps.h, Source/art/ARTContext.m: Remove
	ARTGState's own path handling and have it use GSGState's again.

2002-08-28  Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSGState.m
	New method [currentPoint], gets used in [DPScurrentpoint::].
	Corrected [DPSarc:::::] and [DPSarcn:::::] to draw the arc in user
	space and transfrom it afterwards and implemented  [DPSarct:::::].

2002-08-28 18:55  Alexander Malmberg  <alexander@malmberg.org>

	* Source/x11/XGBitmapImageRep.m, Source/xlib/XGBitmapImageRep.m,
	Source/x11/GNUmakefile, Source/xlib/GNUmakefile: Move
	XGBitmapImageRep.m from xlib/ to x11/.

	* Source/art/ARTContext.m: Remove the copy of the XGBitmapImageRep
	code.

	* Source/art/blit.m: Add missing include of NSDebug.h.
