@@ -1,3 +1,8 @@
+2002-09-01 12:58  Alexander Malmberg  <alexander@malmberg.org>
+
+	* Source/art/ARTContext.m ([ARTGState -GSCurrentDevice:::]): Check
+	for NULL pointers before setting values.
+
 2002-08-31 19:54  Alexander Malmberg  <alexander@malmberg.org>
 
 	* Source/art/path.m (DPSrectfill::::): Calculate alpha pointer
